--- a/package.json
+++ b/package.json
@@ -1,27 +1,24 @@
 {
-  "name": "auth-cas",
+  "name": "simple-auth-cas",
   "version": "1.0.0",
-  "description": "A simple Central Authentication Server client implementation",
+  "description": "A simple Node server implementing CAS login.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zombiepaladin/auth-cas.git"
+    "url": "git+https://github.com/zombiepaladin/simple-auth-cas.git"
   },
   "keywords": [
     "CAS",
-    "authentication",
-    "node"
+    "Node"
   ],
   "author": "Nathan H. Bean",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/zombiepaladin/auth-cas/issues"
+    "url": "https://github.com/zombiepaladin/simple-auth-cas/issues"
   },
-  "homepage": "https://github.com/zombiepaladin/auth-cas#readme",
-  "dependencies": {
-    "express": "4.15.2"
-  }
+  "homepage": "https://github.com/zombiepaladin/simple-auth-cas#readme"
 }
